--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <url>http://github.com/HuaweiSoft/WebDreamer</url>
 
     <properties>
-        <java.version>1.7</java.version>
+       <!-- <java.version>1.7</java.version>-->
         <!--<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
     </properties>
 
@@ -70,10 +70,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
+                <!--<configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
-                </configuration>
+                </configuration>-->
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
